--- a/index.html
+++ b/index.html
@@ -371,10 +371,14 @@ Research New England</a>. (Full time.) <li>
 <h2> Teaching  </h2>
 <ul>
 
-<li><a  href="https://moodle.tau.ac.il/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (Fall 25)</a></li>
+<li><a  href="https://moodle.tau.ac.il/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (0368416201).  Fall 25</a></li>
 
 
-<li><a  href="http://moodle.tau.ac.il/2020/course/view.php?id=368413101"> Foundation  of Cryptography, Advanced Topics (Spring 21)</a></li>
+<li><a href="https://moodle.tau.ac.il/2021/course/view.php?id=368327001"> Information Theory and Application 1 (0368327001) . With Ofer Shayevitz  and Rotem Oshman. Fall 21</a></li>
+
+<li><a href="https://moodle.tau.ac.il/2021/course/view.php?id=368401901"> Information Theory and Application 2 (0368327001). With Ofer Shayevitz  and Rotem Oshman. Spring 22.</a></li>
+
+<li><a  href="http://moodle.tau.ac.il/2020/course/view.php?id=368413101"> Foundation  of Cryptography, Advanced Topics (0368413101). With Nir Bitansky. Spring 21</a></li>
 
 
 <li><a href="http://moodle.tau.ac.il/2020/course/view.php?id=368220001">Computational Models (Fall 20)</a></li>
