--- a/index.html
+++ b/index.html
@@ -378,14 +378,16 @@ Research New England</a>. (Full time.) <li>
 
 <li><a href="https://moodle.tau.ac.il/2021/course/view.php?id=368401901"> Information Theory and Application 2 (0368327001). With Ofer Shayevitz  and Rotem Oshman. Spring 22.</a></li>
 
+<li><a href="http://moodle.tau.ac.il/2020/course/view.php?id=368220001">Computational Models. Fall 20</a></li>
+
+
 <li><a  href="http://moodle.tau.ac.il/2020/course/view.php?id=368413101"> Foundation  of Cryptography, Advanced Topics (0368413101). With Nir Bitansky. Spring 21</a></li>
 
 
-<li><a href="http://moodle.tau.ac.il/2020/course/view.php?id=368220001">Computational Models (Fall 20)</a></li>
 
+<li><a  href="http://moodle.tau.ac.il/2020/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (0368416201). With Omer Paneth. Fall 20. </a></li>
 
-
-<li><a href="https://moodle.tau.ac.il/2020/course/view.php?id=368419101"> Applications of Combinatorics Tools in Cryptography  (student seminar)&nbsp; (Fall 20)</a></li>
+<li><a href="https://moodle.tau.ac.il/2020/course/view.php?id=368419101"> Applications of Combinatorics Tools in Cryptography  (student seminar). (Fall 20)</a></li>
 
 
 <li><a href="https://moodle.tau.ac.il/2019/course/view.php?id=368448601"> Applications of Information Theory&nbsp; (Fall 19)</a></li>
