--- a/Courses/FOC/Fall25/index.html
+++ b/Courses/FOC/Fall25/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>Iftach Haitner - Foundation of Cryptography </title>
+  <title>Iftach Haitner - Information Theory and Applications to Computer Science </title>
   <SCRIPT LANGUAGE="JavaScript" SRC="Files/course.js"></SCRIPT>
   <link rel="stylesheet" type="text/css" href="Files/course.css">
    <META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
@@ -32,20 +32,29 @@
 <div style="text-align : left ; width :900px" >
 <script>document.write(menu)</script>
  <div id=content>
-<p><span class="auto-style1">0368-4162-01, Fall 2025:</span><br />
+<p><span class="auto-style1">0368-4486-01, Spring  2018:</span><br />
 
-<h1>Foundation of Cryptography </h1>
+<h1>Information Theory and Applications to Computer Science</h1>
 
-Tuesdays 10:00-13:00, Room: Dan David 204<br /><br/>
+	 Tuesdays: 10:00-13:00, Room: Schriber 007<br /><br />
 
-<b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
+<b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 020<br /><br />
 
 
-<p><b>Abstract:</b> This is a a graduate-level introduction to the theoretical foundations of Cryptography. We'll study the basic cryptographic primitives (e.g., one-way functions and pseudorandom generators) while focusing on formal definitions and rigorous proofs. Some more advanced topics will be also touched upon.       </p>
- <b> <br />
-	 <br />
+<b>Grader:</b> ?, mailbox: ?<br /><br />
 
- 
+
+
+
+<b>Reception:</b> Sundays 9:30-10:30 (please coordinate via email)<br />
+
+
+	 <br/><br/>
+	 <span class="auto-style1">Announcements:</span></b> 
+
+</div>
+	</div>
+</div>
 </body>
 
 </html>
