--- a/Courses/FOC/Fall25/prerequisite.html
+++ b/Courses/FOC/Fall25/prerequisite.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>Iftach Haitner - Information Theory and Applications to Computer Science</title>
+  <title>Iftach Haitner - Foundation of Cryptography </title>
   <SCRIPT LANGUAGE="JavaScript" SRC="Files/course.js"></SCRIPT>
   <link rel="stylesheet" type="text/css" href="Files/course.css">
    <META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
@@ -21,9 +21,11 @@
 <script>document.write(menu)</script>
  <div id=content>
 <h1>Prerequisite   </h1>
-Prerequisite: Basic probability and calculus. </br>
 
-Course is open for all graduate CS and Math studetns. All other students should contanct me before registering.
+ Basic complexity (the classes P, NP, BPP), basic probability.<br />
+This is a graduate course, where undergrads are encouraged to take <a href="http://tau-crypto12.wikidot.com/" target="_blank">0369.3049</a>.<br /> In some special cases, however, undergrads who got my personal permission can take the course.
+
+
 
 
   </div></div></div>
