--- a/Courses/FOC/Fall25/schedule.html
+++ b/Courses/FOC/Fall25/schedule.html
@@ -1,10 +1,10 @@
-﻿	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>Iftach Haitner - Information Theory and Applications to Computer Science</title>
+  <title>Iftach Haitner - Foundation of Cryptography </title>
   <SCRIPT LANGUAGE="JavaScript" SRC="Files/course.js"></SCRIPT>
   <link rel="stylesheet" type="text/css" href="Files/course.css">
    <META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
@@ -53,10 +53,6 @@
  <div class=content>
 <h1>  Schedule and Slides  </h1>
 
-Lecture topics is taken from  <a href="http://www.cs.tau.ac.il/~iftachh/Courses/Info/Fall15/index.html"> last year course</a> and is not final. Links of future talks will remain broken until (hoefully) the night before the talk. 
-
-</br>
-
 <table border=1 style=" ;" cellpadding=0 cellspacing =0 id=schedule>
 <tbody class=text >
 <th style="width: 7%">Week</td>
@@ -67,93 +63,128 @@ Lecture topics is taken from  <a href="http://www.cs.tau.ac.il/~iftachh/Courses/
 
 <tr>
 <td style="width: 7%">1</td>
-<td style="width: 14%">March 08 </td>
-<td>Introduction: Administrativia and course topics [<a href="Printouts/Introduction_admin_h.pdf" target="_blank">PO</a>] and <br />
-Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">Feb 18</td>
+<td>Introduction; Administrativia and course topics [<a href="Slides/Introduction_admin_S.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Introduction_admin_PO.pdf" target="_blank">PO</a>] and <br />
+basic notations and One-Way Functions
+[<a href="Slides/OWF_S.pdf" target="_blank">Slides</a>] [<a href="Printouts/OWF_PO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">2</td>
-<td style="width: 14%">March 15</td>
-<td class="auto-style4">Joint &amp; Conditional Entropy, Mutual Information [<a href="Printouts/Lesson2_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">Feb 25</td>
+<td class="auto-style4">Pseudorandom Generators [<a href="Slides/Pseudorandomness_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Pseudorandomness_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">3</td>
-<td style="width: 14%">March 22</td>
-<td>Graph Covering  [<a href="Printouts/Lesson3_h.pdf" target="_blank">PO</a>  (the differential entropy part will be given in a later class)] </td>
+<td style="width: 14%">March . 4</td>
+<td>Hardcore Predicates&nbsp; [<a href="Slides/HardCorePredicates_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/HardCorePredicates_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">4</td>
-<td style="width: 14%">March 27 <class="auto-style3">(Tuesday!)</class></td>
-<td>AEP, Data Compression and  Gambling [<a href="Printouts/Lesson4_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">March . 11</td>
+<td>Pseudorandom Functions [<a href="Printouts/Pseudorandomfunctions_h.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Pseudorandomfunctions_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">5</td>
-<td style="width: 14%">April 12</td>
-<td>Channel Capacity and Isoperimetric inequality [<a href="Printouts/Lesson5_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">March. 18</td>
+<td class="auto-style4">
+
+MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/MacsAndSignatures_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">6</td>
-<td style="width: 14%">April 26</td>
-<td>Differential entropy (appears in Lecture 3) and Counting [<a href="Printouts/Lesson6_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">March. 25</td>
+<td class="auto-style4">Interactive Proofs and Zero Knowledge [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/InteractiveProofs_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
-<tr>
-<td style="width: 7%"> </td>
-<td style="width: 14%">May 03</td>
-<td class="auto-style3">No Class</td>
-</tr>
-
-	
-	
-	
 <tr>
 <td style="width: 7%">7</td>
-<td style="width: 14%">May 10</td>
-<td>Relative Entropy [<a href="Printouts/Lesson7_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">April 1</td>
+<td>Commitment Schemes [<a href="Slides/Commitments.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Commitments_h.pdf" target="_blank">PO</a>] and Zero 
+Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/InteractiveProofs_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">8</td>
-<td style="width: 14%">May 17</td>
-<td>Kolmogorov Complexity and Other Entropy Measures [<a href="Printouts/Lesson8_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">April 8</td>
+<td class="auto-style4">Non Interactive Zero Knowledge&nbsp; [<a href="Slides/NIZK_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/NIZK_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">9</td>
-<td style="width: 14%">May 24</td>
-<td>Parallel Repetition of Interactive Arguments [<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">April 15</td>
+<td class="auto-style3">
+
+<strong>No Class, Pesach</strong></td>
 </tr>
 
 <tr>
 <td style="width: 7%">10</td>
-<td style="width: 14%">May 31</td>
-<td>Hardcore Predicates [<a href="Printouts/Lesson10_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">April&nbsp; 22</td>
+<td class="auto-style3">
 
-&nbsp;</td>
+<strong>No Class, Pesach</strong></td>
 </tr>
 
 <tr>
 <td style="width: 7%">11</td>
-<td style="width: 14%">June 07</td>
-<td>Psuedo Entropy and Pseudorandom Generators [<a href="Printouts/Lesson11_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">April&nbsp; 29</td>
+<td>Encryption Schemes &nbsp;&nbsp;[<a href="Slides/Encryption_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Encryption_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">12</td>
-<td style="width: 14%">June 14</td>
-<td>Accessible Entropy and Statistically Hiding Commitments [<a href="Printouts/Lesson12_h.pdf" target="_blank">PO</a>] </td>
+<td style="width: 14%">May 6</td>
+<td class="auto-style3"><strong>No Class, Independent day</strong></td>
 </tr>
 
-	
+	<tr>
+<td style="width: 7%">13</td>
+<td style="width: 14%">May 13</td>
+<td>Encryption Schemes cont.</td>
+	</tr>
+
+<tr>
+<td style="width: 7%">14</td>
+<td style="width: 14%">May 20</td>
+<td>Secure Computation [<a href="Slides/SecureComp_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/SecureComp_h.pdf" target="_blank">PO</a>]</td>
+</tr>
+
+<tr>
+<td style="width: 7%">15</td>
+<td style="width: 14%">May 27</td>
+<td>Pseudorandom Generators&nbsp; from One-Way Functions [<a href="Slides/PRGfromOWF_s.pdf" target="_blank">Slides</a>]&nbsp; [<a href="Printouts/PRGfromOWF_h.pdf" target="_blank">PO</a>]</td>
+</tr>
+<tr>
+<td style="width: 7%">16</td>
+<td style="width: 14%">June 3</td>
+<td class="auto-style3"><strong>No Class Shavut</strong></td>
+</tr>
+
+<tr>
+<td style="width: 7%">17</td>
+<td style="width: 14%">June 10</td>
+<td>Black-box Imposibility results [<a href="Slides/BlackBoxLB_s.pdf" target="_blank">Slides</a>]&nbsp; [<a href="Printouts/BlackBoxLB_h.pdf" target="_blank">PO</a>]</td>
+</tr>
 
 <tr>
 <td style="width: 7%">&nbsp;</td>
-<td style="width: 14%">July 11 </td>
+<td style="width: 14%">June&nbsp; 23 </td>
 <td class="auto-style2"><strong>Exam</strong></td>
 </tr>
 
