--- a/Courses/FOC/Fall25/readings.html
+++ b/Courses/FOC/Fall25/readings.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>Iftach Haitner - Information Theory and Applications to Computer Science</title>
+  <title>Iftach Haitner - Foundation of Cryptography </title>
   <SCRIPT LANGUAGE="JavaScript" SRC="Files/course.js"></SCRIPT>
   <link rel="stylesheet" type="text/css" href="Files/course.css">
    <META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
@@ -20,55 +20,90 @@
 <div style="text-align : left ; width :900px" >
 <script>document.write(menu)</script>
  <div id=content>
-<h1>Additional Reading</h1>
+<h1>Readings</h1>
 
 
 
 		</ol>
 
-      
-	  
-	  <b>Last year course: </b>
-		<a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> Applications of Information Theory&nbsp; (Fall 14)</a><br>
-		
-	<br>	<br />
-	
 
 
-		  You may find  the following reading to be useful references, but beware that
+		  You may find the following to be useful references (but beware that
 
-		some of the notation, conventions, and definitions migth be slightly differ.<br /><br />
+		some of the notation, conventions, and definitions may differ slightly
+
+		from lecture):<br /><br />
 
 
 
 		<b>Books: </b>
 
-		<li >Thomas M. Cover, Joy A. Thomas .&nbsp; <i>
+		<ul type="disc">
 
-			<a href="eu.wiley.com/WileyCDA/WileyTitle/productCd-0471241954.html">Elements of Information Theory</a>. </i><br>
+			<li >Jonathan Katz and Yehuda Lindell.&nbsp; <i>
 
-			</li>
-<br>
-		
-		
-		<b>Papers: </b>
-          
-		<li >Jaikumar Radhakrishnan.&nbsp; <i>
+			<a href="http://www.cs.umd.edu/%7Ejkatz/imc.html">An Introduction to
 
-			<a href="http://www.tcs.tifr.res.in/~jaikumar/Papers/EntropyAndCounting.pdf">Entropy and Counting</a>. </i><br>
+			Modern Cryptography</a>. </i><br>
 
 			</li>
-			
-		
+
+			<li>Oded Goldreich. <i>
+
+			<a href="http://www.wisdom.weizmann.ac.il/%7Eoded/foc-book.html">
+
+			Foundations of Cryptography.</a>&nbsp;</i> <br>
+
+			</li>
+
+		</ul>
+
+		<b>Lecture notes: </b>
+
+		<ul type="disc">
+
+			<li >&nbsp;<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Spring13/index.html">Last 
+			year course (Fall 2013)</a>.&nbsp;</li>
+			<li >Ran Canetti.
+
+			<a href="http://www.cs.tau.ac.il/%7Ecanetti/f08.html">Foundation of
+
+			Cryptography (The 2008 course)</a>&nbsp; and
+
+			<a href="http://people.csail.mit.edu/ronitt/COURSE/S07/lec25.pdf">On
+
+			Chernof and Chebichev bounds</a>.<br>
+
+			</li>
+
+			<li >Salil Vadhan.
+
+			<a href="http://people.seas.harvard.edu/%7Esalil/cs120/">Introduction
+
+			to Cryptography.</a>&nbsp; <br>
+
+			</li>
+
+			<li >Luca Trevisan.
+
+			<a href="http://www.cs.berkeley.edu/%7Edaw/cs276/">Cryptography.</a>&nbsp;<br>
+
+			</li>
+
+			<li >Yehuda lindell
+
+			<a href="http://u.cs.biu.ac.il/%7Elindell/89-856/main-89-856.html">
+
+			Foundations of Cryptography</a>.</li>
+
+		</ul>
 
 
 
 
 
 
-  </div>
-	</div>
-</div>
+  </div></div></div>
 </body>
 
 </html>
