--- a/Courses/FOC/Fall25/index.html
+++ b/Courses/FOC/Fall25/index.html
@@ -26,26 +26,19 @@
 <div style="text-align : left ; width :900px" >
 <script>document.write(menu)</script>
  <div id=content>
-<p><span class="auto-style1">0368-4162-01, Spring 2014:</span><br />
+<p><span class="auto-style1">0368-4162-01, Fall 2025</span><br />
 
 <h1>Foundation of Cryptography </h1>
 
-	 Tuesdays 10:00-13:00, Room: Shriber 007<br /><br />
+	 Thursday 10:00-13:00, Room: Dan David 2004<br /><br />
 
 <b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
 
-<b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email)<br />
+<b>Reception:</b> Coordinate via email<br />
 
 <p><b>Abstract:</b> This is a a graduate-level introduction to the theoretical foundations of Cryptography. We'll study the basic cryptographic primitives (e.g., one-way functions and pseudorandom generators) while focusing on formal definitions and rigorous proofs. Some more advanced topics will be also touched upon.       </p>
  <b> <br />
 	 <br />
-	 <span class="auto-style1">Announcements</span></b> <br />
-
- 	<br />
-	 <span class="auto-style1">The website of the <strong>Greater Tel-Aviv Area Crypto seminar
-  </strong>(GTACS) can be found 
-  <a href="http://www.cs.tau.ac.il/cseminar/">here</a>.</span></div>
-	</div>
 </div>
 </body>
 
