--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
   <!DOCTYPE html>
-<html><head><title>Iftach Haitner's Home Page</title>
+<html><head>
+<title>Iftach Haitner's Home Page</title>
+<link rel="icon" type="image/png" href="wcat.png">
 <script type="text/javascript" src="jquery.js"></script>
 <style>
 BODY { font-family :  verdana, arial, helvetica, sans-serif; BACKGROUND-COLOR: #eee ; color : #333  ; }
